<resources>
    <string name="app_name">TodoApp</string>
    <string name="username">UserName</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo_task1">Todo Task1</string>
    <string name="to_do_hint">To do Hint</string>
    <string name="add_todo">Add Todo</string>
    <string name="completed">Completed</string>
    <string name="don_t_have_an_account_sign_up"> <a href="">Don\'t Have an account ? Sign up!</a></string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out ?</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="edit_todo">Edit Todo</string>
</resources>