<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E4E1EA"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/confirm_logout"
            android:textColor="#6A87CD"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/title"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="#E4E1EA" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line"
            android:layout_marginStart="25dp"
            android:padding="20dp"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textColor="#6A87CD"
            android:textSize="20sp"
            android:textStyle="italic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="#6A87CD"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:strokeColor="#6A87CD" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_title"
            android:layout_toEndOf="@id/cancel_button"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/log_out"
            app:cornerRadius="10dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
